# pandas_project_reloaded

./: LICENSE  README.md  TAG_Datensatz_19000101_20221031.csv  setup.cfg
temperature_calc/: cli.py  hotfrostdays.py  io_aws_data.py  monthly_anomalies.py
